Refacttor: remove startup stores from state manager